修复led屏幕新增model传值为空导致模板取值渲染失败BUG

--- a/src/main/webapp/WEB-INF/templates/xixun/xixunAD.html
+++ b/src/main/webapp/WEB-INF/templates/xixun/xixunAD.html
@@ -295,21 +295,21 @@
                         "                            <a class=\"btn-floating blue waves-effect waves-light tooltipped btn modal-trigger\"\n" +
                         "                               data-position=\"top\" data-delay=\"50\" data-tooltip=\"查看详情\" href=\"#detail-modal\"\n" +
                         "                               onclick=\"detail('"+adid+"','"+ledco+"')\">\n" +
-                        "                                <i class=\"material-icons\">more_horiz</i>\n" +
+                        "                                <i class=\"material-icons\">详情</i>\n" +
                         "                            </a>\n" +
                         "                        </li>\n" +
                         "                        <li>\n" +
                         "                           <a class=\"btn-floating green waves-effect waves-light tooltipped btn modal-trigger\" data-position=\"top\"\n" +
                         "                                data-delay=\"50\" data-tooltip='编辑' href=\'/mng/xixunAD/form?id=\+"+adid+"'\n" +
                         // "                               onclick='update("+adid+")'>\n" +
-                        "                                <i class=\"material-icons\">edit</i>\n" +
+                        "                                <i class=\"material-icons\">编辑</i>\n" +
                         "                            </a>\n" +
                         "                        </li>\n" +
                         "                        <li>\n" +
                         "                           <a class=\"btn-floating black waves-effect waves-light tooltipped btn modal-trigger\" data-position=\"top\"\n" +
                         "                                data-delay=\"50\" data-tooltip='操作' href=\"#operate-modal\"\n" +
                         "                                onclick='operate(\""+led+"\")'>\n" +
-                        "                                <i class=\"material-icons\">settings_applications</i>\n" +
+                        "                                <i class=\"material-icons\">字幕</i>\n" +
                         "                            </a>\n" +
                         "                        </li>\n" +
                         "                    </ul>\n" +
